Final touches , Fronent env configuration