@@ -23,6 +23,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -68,6 +69,8 @@ public class SecurityConfig {
                 .authorizeHttpRequests(auth -> auth
                         //For Options
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(basePath + "/product/getAll",
+                                basePath + "/product/getAll/**").permitAll()
                         .requestMatchers(basePath + "/auth/**",
                                 basePath + "/public/**",
                                 "/swagger-ui/**",
@@ -75,7 +78,7 @@ public class SecurityConfig {
                                 "/error",
                                 "/api/v1/images/**",
                                 "/swagger-ui.html").permitAll()
-                        .requestMatchers(basePath + "/admin/**").hasRole("ADMIN")
+//                        .requestMatchers(basePath + "/admin/**").hasRole("ADMIN")
                         .anyRequest().authenticated()
                 )
                 .authenticationProvider(authenticationProvider())
@@ -90,7 +93,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // In production, restrict to your frontend domain
+        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // In production, restrict to your frontend domain
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token", "X-User-Id"));
 
